[project]
name = "aio2026-conquer-module-01"
version = "0.1.0"
description = "Similarity matching methods for images and texts (ResNet+TF-IDF, linear projection, CLIP) on Flickr8k."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupytext>=1.19.4",
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "torch>=2.2",
    "torchvision>=0.17",
    "transformers>=4.40",
    "datasets>=2.19",
    "scikit-learn>=1.4",
    "tabulate>=0.9",
]
